--- a/EMS/core-bundle/src/Resources/public/manifest.json
+++ b/EMS/core-bundle/src/Resources/public/manifest.json
@@ -24,25 +24,27 @@
   "yellow-light.css": "bundles/emscore/css/yellow-light.d49e5306580cfb1f6833.css",
   "yellow-light.js": "bundles/emscore/js/yellow-light.31d6cfe0d16ae931b73c.js",
   "app.css": "bundles/emscore/css/app.99a9d698a128eac81304.css",
-  "app.js": "bundles/emscore/js/app.338e669c09d5c0e9d019.js",
+  "app.js": "bundles/emscore/js/app.f61c7981da9ed7ee1397.js",
   "edit-revision.css": "bundles/emscore/css/edit-revision.99a9d698a128eac81304.css",
-  "edit-revision.js": "bundles/emscore/js/edit-revision.2035b87bb81a1a5d87bf.js",
+  "edit-revision.js": "bundles/emscore/js/edit-revision.978e766c36fb366a9b4f.js",
   "managed-alias.css": "bundles/emscore/css/managed-alias.fb58632f0abc58fff4e2.css",
-  "managed-alias.js": "bundles/emscore/js/managed-alias.0e599243db634c36c9b8.js",
+  "managed-alias.js": "bundles/emscore/js/managed-alias.d39a685d336b663e87ad.js",
   "user-profile.css": "bundles/emscore/css/user-profile.fb58632f0abc58fff4e2.css",
-  "user-profile.js": "bundles/emscore/js/user-profile.7380b19998eb6ac4da17.js",
+  "user-profile.js": "bundles/emscore/js/user-profile.0f428063361784c2ecf6.js",
   "template.css": "bundles/emscore/css/template.fb58632f0abc58fff4e2.css",
-  "template.js": "bundles/emscore/js/template.37e69305f3fbffa46cf7.js",
+  "template.js": "bundles/emscore/js/template.4116831d1de15f04adec.js",
   "hierarchical.css": "bundles/emscore/css/hierarchical.fb58632f0abc58fff4e2.css",
-  "hierarchical.js": "bundles/emscore/js/hierarchical.ff76c84ec7c3ac256f27.js",
+  "hierarchical.js": "bundles/emscore/js/hierarchical.c30ada449e0b7868e1a2.js",
   "calendar.css": "bundles/emscore/css/calendar.fb58632f0abc58fff4e2.css",
-  "calendar.js": "bundles/emscore/js/calendar.52d77eb660c6ac2dfe57.js",
+  "calendar.js": "bundles/emscore/js/calendar.d4b5a50e25bafcf9ddc1.js",
   "criteria-view.css": "bundles/emscore/css/criteria-view.fb58632f0abc58fff4e2.css",
-  "criteria-view.js": "bundles/emscore/js/criteria-view.fe0fa3c2e137d638d9da.js",
+  "criteria-view.js": "bundles/emscore/js/criteria-view.8f4164e211bafdd3a436.js",
   "criteria-table.css": "bundles/emscore/css/criteria-table.fb58632f0abc58fff4e2.css",
-  "criteria-table.js": "bundles/emscore/js/criteria-table.f896bf25a4a207bb41de.js",
+  "criteria-table.js": "bundles/emscore/js/criteria-table.47b7d91f79ba23a199f8.js",
   "i18n.css": "bundles/emscore/css/i18n.fb58632f0abc58fff4e2.css",
-  "i18n.js": "bundles/emscore/js/i18n.97066178070aa190d60a.js",
+  "i18n.js": "bundles/emscore/js/i18n.8ae28acbe1cd0b6d7db5.js",
+  "dashboard-browser.css": "bundles/emscore/css/dashboard-browser.c21d41ef5dc32de86605.css",
+  "dashboard-browser.js": "bundles/emscore/js/dashboard-browser.fdcb2e70c1fa4bcbf42b.js",
   "js/ace/worker-xquery.js": "bundles/emscore/js/ace/worker-xquery.js",
   "js/ace/worker-javascript.js": "bundles/emscore/js/ace/worker-javascript.js",
   "js/ace/mode-php_laravel_blade.js": "bundles/emscore/js/ace/mode-php_laravel_blade.js",
@@ -189,10 +191,10 @@
   "js/ckeditor/plugins/scayt/dialogs/options.js": "bundles/emscore/js/ckeditor/plugins/scayt/dialogs/options.js",
   "js/ace/mode-sass.js": "bundles/emscore/js/ace/mode-sass.js",
   "js/ace/mode-ocaml.js": "bundles/emscore/js/ace/mode-ocaml.js",
+  "js/cke-plugins/adv_link/dialogs/link.js": "bundles/emscore/js/cke-plugins/adv_link/dialogs/link.js",
   "js/ckeditor/lang/fa.js": "bundles/emscore/js/ckeditor/lang/fa.js",
   "js/ace/ext-settings_menu.js": "bundles/emscore/js/ace/ext-settings_menu.js",
   "js/ckeditor/skins/moono-lisa/dialog_ie8.css": "bundles/emscore/js/ckeditor/skins/moono-lisa/dialog_ie8.css",
-  "js/cke-plugins/adv_link/dialogs/link.js": "bundles/emscore/js/cke-plugins/adv_link/dialogs/link.js",
   "js/ckeditor/skins/moono/dialog_ie7.css": "bundles/emscore/js/ckeditor/skins/moono/dialog_ie7.css",
   "js/ckeditor/lang/hi.js": "bundles/emscore/js/ckeditor/lang/hi.js",
   "js/ckeditor/lang/bn.js": "bundles/emscore/js/ckeditor/lang/bn.js",
