--- a/elasticms-cli/config/packages/doctrine.yaml
+++ b/elasticms-cli/config/packages/doctrine.yaml
@@ -11,6 +11,7 @@ doctrine:
         auto_mapping: true
         enable_lazy_ghost_objects: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
+        validate_xml_mapping: true
         mappings:
             App:
               is_bundle: false
