--- a/elasticms-admin/config/packages/ems_core.yaml
+++ b/elasticms-admin/config/packages/ems_core.yaml
@@ -58,6 +58,7 @@ parameters:
     env(EMSCO_CUSTOM_USER_OPTIONS_FORM): ~
     env(EMSCO_FALLBACK_LOCALE): 'en'
     env(EMSCO_TEMPLATE_NAMESPACE): 'EMSCore'
+    env(EMSCO_DYNAMIC_MAPPING): 'false'
 
     env(EMSCO_LDAP_ENABLED): true
     env(EMSCO_LDAP_DN_STRING): '%env(string:LDAP_DN_STRING)%'
@@ -100,6 +101,7 @@ ems_core:
     custom_user_options_form: '%env(string:EMSCO_CUSTOM_USER_OPTIONS_FORM)%'
     fallback_locale: '%env(string:EMSCO_FALLBACK_LOCALE)%'
     template_namespace: '%env(string:EMSCO_TEMPLATE_NAMESPACE)%'
+    dynamic_mapping: '%env(string:EMSCO_DYNAMIC_MAPPING)%'
 
     ldap:
         enabled: '%env(bool:EMSCO_LDAP_ENABLED)%'
