--- a/EMS/admin-ui-bundle/composer.json
+++ b/EMS/admin-ui-bundle/composer.json
@@ -16,7 +16,7 @@
 	],
 	"require" : {
 		"php": "^8.1",
-		"elasticms/core-bundle": "~5.12.0"
+		"elasticms/core-bundle": "5.13.*"
 	},
 	"autoload" : {
 		"psr-4" : {
