--- a/elasticms-cli/composer.json
+++ b/elasticms-cli/composer.json
@@ -18,7 +18,7 @@
     "ext-json": "*",
     "ext-sqlite3": "*",
     "doctrine/doctrine-migrations-bundle": "^3.2",
-    "elasticms/common-bundle": "~5.12.0",
+    "elasticms/common-bundle": "5.13.*",
     "kevinrob/guzzle-cache-middleware": "^4.0",
     "symfony/console": "^5.4",
     "symfony/css-selector": "^5.4",
