--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -22,7 +22,10 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
+    "bootstrap-select": "^1.14.0-beta3",
     "icheck-bootstrap": "^3.0.1",
-    "jquery": "^3.7.0"
+    "jquery": "^3.7.0",
+    "jquery-lazyload": "^1.9.7",
+    "select2": "^4.1.0-rc.0"
   }
 }
