--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -29,6 +29,8 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
     "bootstrap-select": "^1.14.0-beta3",
+    "datatables.net": "^1.13.8",
+    "datatables.net-bs": "^1.13.8",
     "icheck-bootstrap": "^3.0.1",
     "jquery": "^3.7.0",
     "jquery-lazyload": "^1.9.7",
