--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -25,6 +25,10 @@
     "webpack-manifest-plugin": "^5.0.0"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-dev-translations": "^39.5.1",
+    "@ckeditor/ckeditor5-dev-utils": "^39.5.1",
+    "@ckeditor/ckeditor5-theme-lark": "^40.2.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
