--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "lint": "eslint --fix assets/",
     "prod": "webpack --mode=production",
     "dev": "webpack --mode=development",
     "watch": "webpack --mode=development --watch"
@@ -8,6 +9,11 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "eslint": "^8.56.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.3.3",
@@ -19,10 +25,20 @@
     "webpack-manifest-plugin": "^5.0.0"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-dev-translations": "^39.5.1",
+    "@ckeditor/ckeditor5-dev-utils": "^39.5.1",
+    "@ckeditor/ckeditor5-theme-lark": "^40.2.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
+    "bootstrap-select": "^1.14.0-beta3",
+    "datatables.net": "^1.13.8",
+    "datatables.net-bs": "^1.13.8",
     "icheck-bootstrap": "^3.0.1",
-    "jquery": "^3.7.0"
+    "jquery": "^3.7.0",
+    "jquery-lazyload": "^1.9.7",
+    "jquery-ui": "^1.13.2",
+    "select2": "^4.1.0-rc.0"
   }
 }
