--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -40,6 +40,7 @@
     "jquery": "^3.7.0",
     "jquery-lazyload": "^1.9.7",
     "jquery-ui": "^1.13.2",
-    "select2": "^4.1.0-rc.0"
+    "select2": "^4.1.0-rc.0",
+    "sortablejs": "^1.15.1"
   }
 }
