--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -29,6 +29,7 @@
     "@ckeditor/ckeditor5-dev-translations": "^39.5.1",
     "@ckeditor/ckeditor5-dev-utils": "^39.5.1",
     "@ckeditor/ckeditor5-theme-lark": "^40.2.0",
+    "@elasticms/file-uploader": "^1.0.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
@@ -39,6 +40,7 @@
     "jquery": "^3.7.0",
     "jquery-lazyload": "^1.9.7",
     "jquery-ui": "^1.13.2",
-    "select2": "^4.1.0-rc.0"
+    "select2": "^4.1.0-rc.0",
+    "sortablejs": "^1.15.1"
   }
 }
