--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "lint": "eslint --fix assets/",
+    "lint": "eslint --fix assets/ && stylelint --fix \"assets/**/*.scss\"",
     "prod": "webpack --mode=production",
     "dev": "webpack --mode=development",
     "watch": "webpack --mode=development --watch"
@@ -20,6 +20,8 @@
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "stylelint": "^16.1.0",
+    "stylelint-config-standard-scss": "^13.0.0",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
     "webpack-manifest-plugin": "^5.0.0"
