--- a/EMS/admin-ui-bundle/.stylelintrc.json
+++ b/EMS/admin-ui-bundle/.stylelintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "stylelint-config-standard-scss"
+  "extends": "stylelint-config-standard-scss",
+  "rules": {
+    "no-descending-specificity": null,
+    "selector-class-pattern": null
+  }
 }
