--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -34,6 +34,7 @@
     "@elasticms/file-uploader": "^1.0.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.8",
+    "ace-builds": "^1.32.3",
     "bootstrap": "^5.3.0",
     "bootstrap-select": "^1.14.0-beta3",
     "datatables.net": "^1.13.8",
