--- a/elasticms-admin/config/services.yaml
+++ b/elasticms-admin/config/services.yaml
@@ -36,7 +36,7 @@ services:
     Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler:
         arguments:
             - '%env(DB_DRIVER)%:dbname=%env(DB_NAME)%; host=%env(DB_HOST)%; port=%env(DB_PORT)%'
-            - { db_username: '%env(DB_USER)%', db_password: '%env(DB_PASSWORD)%', db_table: 'session', db_id_col: 'id', db_data_col: 'data', db_time_col: 'time', db_lifetime_col: 'lifetime' }
+            - { db_username: '%env(DB_USER)%', db_password: '%env(DB_PASSWORD)%', db_table: 'session', db_id_col: 'id', db_data_col: 'data', db_time_col: 'time', db_lifetime_col: 'lifetime' }:
 
     #Redis configuration
     Redis:
