--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -33,6 +33,7 @@
     "@ckeditor/ckeditor5-dev-utils": "^39.5.1",
     "@ckeditor/ckeditor5-theme-lark": "^40.2.0",
     "@elasticms/file-uploader": "^1.0.1",
+    "@eonasdan/tempus-dominus": "^6.9.5",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.8",
     "ace-builds": "^1.32.3",
