--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -33,6 +33,7 @@
     "@ckeditor/ckeditor5-dev-utils": "^39.5.1",
     "@ckeditor/ckeditor5-theme-lark": "^40.2.0",
     "@elasticms/file-uploader": "^1.0.1",
+    "@eonasdan/tempus-dominus": "^6.9.5",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.8",
     "ace-builds": "^1.32.3",
@@ -45,6 +46,7 @@
     "jquery-lazyload": "^1.9.7",
     "jquery-ui": "^1.13.2",
     "select2": "^4.1.0-rc.0",
-    "sortablejs": "^1.15.1"
+    "sortablejs": "^1.15.1",
+    "uuid": "^9.0.1"
   }
 }
