--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -46,6 +46,7 @@
     "jquery-lazyload": "^1.9.7",
     "jquery-ui": "^1.13.2",
     "select2": "^4.1.0-rc.0",
+    "select2-bootstrap-5-theme": "^1.3.0",
     "sortablejs": "^1.15.1",
     "uuid": "^9.0.1"
   }
