--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -38,7 +38,6 @@
     "@popperjs/core": "^2.11.8",
     "ace-builds": "^1.32.3",
     "bootstrap": "^5.3.0",
-    "bootstrap-select": "^1.14.0-beta3",
     "datatables.net": "^1.13.8",
     "datatables.net-bs": "^1.13.8",
     "icheck-bootstrap": "^3.0.1",
@@ -46,6 +45,7 @@
     "jquery-lazyload": "^1.9.7",
     "jquery-ui": "^1.13.2",
     "select2": "^4.1.0-rc.0",
+    "select2-bootstrap-5-theme": "^1.3.0",
     "sortablejs": "^1.15.1",
     "uuid": "^9.0.1"
   }
