--- a/elasticms-admin/config/packages/security.yaml
+++ b/elasticms-admin/config/packages/security.yaml
@@ -9,7 +9,7 @@ security:
         ROLE_REVIEWER:        ROLE_AUTHOR
         ROLE_TRADUCTOR:       ROLE_REVIEWER
         ROLE_AUDITOR:         ROLE_REVIEWER
-        ROLE_COPYWRITER:      ROLE_TRADUCTOR
+        ROLE_COPYWRITER:      ROLE_AUDITOR
         ROLE_PUBLISHER:       ROLE_COPYWRITER
         ROLE_WEBMASTER:       ROLE_PUBLISHER
         ROLE_ADMIN:           [ROLE_WEBMASTER, ROLE_USER_MANAGEMENT]
