--- a/.editorconfig
+++ b/.editorconfig
@@ -14,7 +14,7 @@ indent_style = space
 trim_trailing_whitespace = false
 max_line_length = 80
 
-[*.{yml,php,html,twig,js,json}]
+[*.{yml,php,html,twig,js,json,xml}]
 indent_size = 4
 
 [COMMIT_EDITMSG]
