--- a/EMS/form-bundle/babel.config.json
+++ b/EMS/form-bundle/babel.config.json
@@ -2,7 +2,7 @@
   "presets": [
     ["@babel/preset-env", {
         "debug": true,
-        "useBuiltIns": "entry",
+        "useBuiltIns": "usage",
         "corejs": 3
       }
     ]
