--- a/EMS/form-bundle/package.json
+++ b/EMS/form-bundle/package.json
@@ -33,6 +33,7 @@
     "child-replace-with-polyfill": "^1.0.1",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.36.1",
     "core-js-pure": "^3.16.3",
     "css-loader": "^6.7.1",
     "eslint": "^6.8.0",
@@ -47,6 +48,7 @@
     "typescript": "^4.5.4",
     "url-loader": "^4.1.1",
     "url-polyfill": "^1.1.12",
+    "vm-browserify": "^1.1.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-manifest-plugin": "^5.0.0"
