--- a/EMS/core-bundle/tests/Integration/App/config/security.yaml
+++ b/EMS/core-bundle/tests/Integration/App/config/security.yaml
@@ -33,19 +33,26 @@ security:
       provider: emsco_user_api
       custom_authenticators:
         - emsco.security.authenticator.auth_token
+      login_throttling:
+        limiter: ems.security.login.rate_limiter
+        max_attempts: 3
+        interval: 1 minutes
     ems_core:
       lazy: true
       provider: emsco_user
       custom_authenticators:
         - emsco.security.authenticator.form_login
         - emsco.security.authenticator.auth_token_login
+      login_throttling:
+        limiter: ems.security.login.rate_limiter
+        max_attempts: 3
+        interval: 1 minutes
       logout:
         path: emsco_user_logout
       remember_me:
         secret:   '%kernel.secret%'
         lifetime: 604800 # 1 week in seconds
       switch_user: { role: ROLE_ADMIN, provider: emsco_user }
-
   access_control:
     - { path: ^/$, role: PUBLIC_ACCESS }
     - { path: ^/metrics$, role: PUBLIC_ACCESS }
