--- a/composer.json
+++ b/composer.json
@@ -85,6 +85,7 @@
     "symfony/process": "^5.4",
     "symfony/property-access": "^5.4",
     "symfony/property-info": "^5.4",
+    "symfony/rate-limiter": "^6.4",
     "symfony/routing": "^5.4",
     "symfony/runtime": "^5.4",
     "symfony/security-bundle": "^5.4",
