--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -61,6 +61,7 @@
     "@popperjs/core": "^2.11.8",
     "ace-builds": "^1.32.3",
     "bootstrap": "^5.3.0",
+    "cropperjs": "^1.6.1",
     "datatables.net": "^1.13.8",
     "datatables.net-bs": "^1.13.8",
     "icheck-bootstrap": "^3.0.1",
