--- a/docker/idp/docker-compose.yml
+++ b/docker/idp/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.5'
 
 services:
   keycloak:
-    image: quay.io/keycloak/keycloak:latest
+    image: quay.io/keycloak/keycloak:24.0
     container_name: ems-mono-keycloak
     environment:
       KC_DB: postgres
