--- a/elasticms-web/config/packages/security.yaml
+++ b/elasticms-web/config/packages/security.yaml
@@ -4,11 +4,11 @@ security:
     providers:
         core_api:
             id: emsch.security.core_api.user_provider
-        saml:
-            id: emsch.security.sso.saml.user_provider
+        sso:
+            id: emsch.security.sso.user_provider
         chain_providers:
             chain:
-                providers: [ 'core_api', 'saml' ]
+                providers: [ 'core_api', 'sso' ]
 
     firewalls:
         dev:
