--- a/elasticms-web/config/packages/ems_client_helper.yaml
+++ b/elasticms-web/config/packages/ems_client_helper.yaml
@@ -56,17 +56,16 @@ ems_client_helper:
         url: '%env(string:EMSCH_BACKEND_URL)%'
     security:
         route_login: '%env(string:EMSCH_SECURITY_ROUTE_LOGIN)%'
-        saml:
-            enabled: '%env(bool:EMSCH_SAML)%'
-            sp:
-                entity_id: '%env(string:EMSCH_SAML_SP_ENTITY_ID)%'
-                public_key: '%env(string:EMSCH_SAML_SP_PUBLIC_KEY)%'
-                private_key: '%env(string:EMSCH_SAML_SP_PRIVATE_KEY)%'
-            idp:
-                entity_id: '%env(string:EMSCH_SAML_IDP_ENTITY_ID)%'
-                public_key: '%env(string:EMSCH_SAML_IDP_PUBLIC_KEY)%'
-                sso: '%env(string:EMSCH_SAML_IDP_SSO)%'
-            security: '%env(json:EMSCH_SAML_SECURITY)%'
+        sso:
+            saml:
+                enabled: '%env(bool:EMSCH_SAML)%'
+                sp_entity_id: '%env(string:EMSCH_SAML_SP_ENTITY_ID)%'
+                sp_public_key: '%env(string:EMSCH_SAML_SP_PUBLIC_KEY)%'
+                sp_private_key: '%env(string:EMSCH_SAML_SP_PRIVATE_KEY)%'
+                idp_entity_id: '%env(string:EMSCH_SAML_IDP_ENTITY_ID)%'
+                idp_public_key: '%env(string:EMSCH_SAML_IDP_PUBLIC_KEY)%'
+                idp_sso: '%env(string:EMSCH_SAML_IDP_SSO)%'
+                security: '%env(json:EMSCH_SAML_SECURITY)%'
 
 when@dev:
     ems_client_helper:
