--- a/demo/skeleton/routes.yaml
+++ b/demo/skeleton/routes.yaml
@@ -56,17 +56,23 @@ google_verification:
     config:
         path: google559a317bdba2ec40.html
     template_static: template/seo/google.html.twig
-emsch_sso_test:
-  config:
-      path: '/sso/test'
-      defaults: { _authenticated: true }
-  template_static: template/sso/test_sso.html.twig
+emsch_login:
+    config:
+        controller: emsch.controller.security.login
+        path: /login
+        method: [POST, GET]
+    template_static: template/security/login.html.twig
+emsch_profile:
+    config:
+        path: /profile
+        defaults: { _authenticated: true }
+    template_static: template/security/profile.html.twig
 emsch_api_form_attachment:
     config:
         path: '/form/{submissionId}/attachment/{submissionFileId}'
         defaults: { apiName: backend, _authenticated: true }
         controller: 'emsch.controller.api::getSubmissionFile'
-        requirements: { submissionId: .*, submissionFileId: .* }
+        requirements: { submissionId: '.*', submissionFileId: '.*' }
 emsch_publication:
     config:
         path: { en: 'publications/{slug}', fr: 'fr/publications/{slug}', nl: 'nl/publicaties/{slug}', de: 'de/publikation/{slug}' }
