feat(core/api): fileUrl for submission endpoint

--- a/elasticms-admin/config/packages/framework.yaml
+++ b/elasticms-admin/config/packages/framework.yaml
@@ -18,6 +18,11 @@ framework:
     validation:
         email_validation_mode: html5
 
+    http_client:
+      default_options:
+        headers:
+          'Cookie': 'XDEBUG_SESSION=PHPSTORM'
+
 when@redis:
     framework:
         session:
