feat: common bundle new request.trusted_ips

--- a/elasticms-admin/config/packages/ems_common.yaml
+++ b/elasticms-admin/config/packages/ems_common.yaml
@@ -35,6 +35,7 @@ parameters:
     env(EMS_WEBALIZE_DASHABLE_REGEX): '/[\/| '']+/'
     env(EMS_EXCLUDED_CONTENT_TYPES): '[]'
     env(EMS_SLUG_SYMBOL_MAP): ~
+    env(EMS_TRUSTED_IPS): '[]'
 
 ems_common:
     hash_algo: '%env(string:EMS_HASH_ALGO)%'
@@ -61,6 +62,8 @@ ems_common:
         enabled: '%env(bool:EMS_METRIC_ENABLED)%'
         host: '%env(string:EMS_METRIC_HOST)%'
         port: '%env(EMS_METRIC_PORT)%'
+    request:
+        trusted_ips: '%env(json:EMS_TRUSTED_IPS)%'
 
 when@dev:
     ems_common:
