feat: add new parameter to .env.dist

--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -89,6 +89,7 @@ EMS_EXCLUDED_CONTENT_TYPES='["route","template","template_ems","label"]'
 #EMS_METRIC_PORT=
 EMS_STORAGES='[{"type":"s3","usage":"cache","bucket":"demo","credentials":{"version":"2006-03-01","credentials":{"key":"accesskey","secret":"secretkey"},"region":"us-east-1","endpoint":"http://localhost:9000","use_path_style_endpoint":true}}]'
 EMS_STORE_DATA_SERVICES=[]
+EMS_TRUSTED_IPS='[]'
 #EMS_WEBALIZE_DASHABLE_REGEX='/[\/\_\|\ \-]+/'
 #EMS_WEBALIZE_REMOVABLE_REGEX='/([^a-zA-Z0-9\_\|\ \-\.])|(\.$)/'
 ###< elasticms/common-bundle ###
