--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -75,6 +75,7 @@ EMSCO_TIKA_SERVER='http://localhost:9998'
 
 ###> elasticms/common-bundle ###
 #EMS_BACKEND_API_KEY=
+#EMS_BACKEND_API_TIMEOUT='30'
 #EMS_BACKEND_API_VERIFY=true
 #EMS_BACKEND_URL=
 EMS_CACHE=redis
