--- a/elasticms-admin/config/packages/ems_common.yaml
+++ b/elasticms-admin/config/packages/ems_common.yaml
@@ -23,6 +23,7 @@ parameters:
     env(EMS_BACKEND_URL): ~
     env(EMS_BACKEND_API_KEY): ~
     env(EMS_BACKEND_API_VERIFY): true
+    env(EMS_BACKEND_API_TIMEOUT): '30'
 
     env(EMS_CACHE): 'file_system'
     env(EMS_CACHE_PREFIX): ~
@@ -47,6 +48,7 @@ ems_common:
     backend_url: '%env(string:EMS_BACKEND_URL)%'
     backend_api_key: '%env(string:EMS_BACKEND_API_KEY)%'
     backend_api_verify: '%env(bool:EMS_BACKEND_API_VERIFY)%'
+    backend_api_timeout: '%env(int:EMS_BACKEND_API_TIMEOUT)%'
     excluded_content_types: '%env(json:EMS_EXCLUDED_CONTENT_TYPES)%'
     slug_symbol_map: '%env(json:EMS_SLUG_SYMBOL_MAP)%'
     webalize:
